# connect4Bot_ws

./: README.md
src/gripper_control/: package.xml  setup.py
src/gripper_control/gripper_control/: servo_node.py
src/ur3e_basic_control/: ur3_gripperTest.py  ur3_move.py  ur3_pickandplace.py  ur3_query.py
src/ur3e_moveit_control/: CMakeLists.txt  package.xml
src/ur3e_moveit_control/launch/: pick_and_place.launch.py
src/ur3e_moveit_control/src/: pick_and_place.cpp  print_current_pose.cpp
